--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "gen": "prismic-ts-codegen"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@prismicio/client": "^7.1.0",
     "@prismicio/next": "^1.3.1",
     "@prismicio/react": "^2.7.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.16",
+    "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "next": "^13.4.4",
     "react": "^18.2.0",
