--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@prismicio/next": "^1.3.1",
     "@prismicio/react": "^2.7.0",
     "clsx": "^1.2.1",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "framer-motion": "^10.12.16",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
