--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gen": "prismic-ts-codegen"
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.2.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@prismicio/client": "^7.1.0",
     "@prismicio/next": "^1.3.1",
