--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@dotlottie/react-player": "^1.2.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@next/font": "^13.4.18",
     "@prismicio/client": "^7.1.0",
     "@prismicio/next": "^1.3.1",
     "@prismicio/react": "^2.7.0",
