--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flowbite-react": "^0.5.0",
     "framer-motion": "^10.12.16",
     "googleapis": "^126.0.1",
+    "gsap": "^3.12.2",
     "media-chrome": "^1.4.2",
     "moment": "^2.29.4",
     "next": "^13.4.4",
