--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prismicio/next": "^1.3.1",
     "@prismicio/react": "^2.7.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "framer-motion": "^10.12.16",
