--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gsap": "^3.12.2",
     "media-chrome": "^1.4.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.45",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
