--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "formik": "^2.4.5",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.18.0",
     "googleapis": "^126.0.1",
     "gsap": "^3.12.2",
     "media-chrome": "^1.4.2",
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.13.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
