--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.8",
     "tw-elements": "^1.0.0",
     "tw-elements-react": "^1.0.0-alpha1",
     "url-loader": "^4.1.1"
