--- a/package.json
+++ b/package.json
@@ -20,14 +20,22 @@
     "@prismicio/client": "^7.1.0",
     "@prismicio/next": "^1.3.1",
     "@prismicio/react": "^2.7.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.2.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "googleapis": "^126.0.1",
     "gsap": "^3.12.2",
+    "lucide-react": "^0.429.0",
     "media-chrome": "^1.4.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.45",
@@ -41,6 +49,8 @@
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.8",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "tw-elements": "^1.0.0",
     "tw-elements-react": "^1.0.0-alpha1",
     "url-loader": "^4.1.1"
